fix(backend): resolve SonarQube violations in action policy and activity log
- Remove unused 'dialogueId' parameter from ActionPermissionService and Controller
- Replace 'Stream.collect(Collectors.toList())' with 'Stream.toList()' in ActivityLogService
- Fix potential sign extension bug in HashBasedEmbeddingService by adding '& 0xff'